Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11701

replay-single test_80a: FAIL: remote creation failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0
    • None
    • 3
    • 9223372036854775807

      00000100:00100000:0.0:1537197833.266053:0:2424:0:(service.c:2121:ptlrpc_server_handle_request()) Handling RPC pname:cluuid+ref:pid:xid:nid:opc mdt_seqm_0001:e80eb16b-341d-fb11-927b-5ebe3cca279c+5:16600:x1611866673945296:12345-192.168.112.7@tcp:700
      00000100:00100000:0.0:1537197833.266075:0:2424:0:(client.c:1667:ptlrpc_send_new_req()) Sending RPC pname:cluuid:pid:xid:nid:opc mdt_seqm_0001:lustre-MDT0000-lwp-MDT0001_UUID:2424:1611866679113568:0@lo:700
      00000100:00100000:1.0:1537197833.266325:0:2937:0:(service.c:2121:ptlrpc_server_handle_request()) Handling RPC pname:cluuid+ref:pid:xid:nid:opc mdt_seqs_0002:lustre-MDT0000-lwp-MDT0001_UUID+7:2424:x1611866679113568:12345-0@lo:700
      00000100:00080000:1.0:1537197833.650023:0:2937:0:(niobuf.c:583:ptlrpc_send_reply()) sending ENODEV from failed obd 6
      00000100:00100000:1.0:1537197833.650045:0:2937:0:(service.c:2171:ptlrpc_server_handle_request()) Handled RPC pname:cluuid+ref:pid:xid:nid:opc mdt_seqs_0002:lustre-MDT0000-lwp-MDT0001_UUID+4:2424:x1611866679113568:12345-0@lo:700 Request procesed in 383720us (383932us total) trans 0 rc -19/-19
      00000100:00100000:1.0:1537197849.249530:0:2420:0:(service.c:2121:ptlrpc_server_handle_request()) Handling RPC pname:cluuid+ref:pid:xid:nid:opc mdt_out00_001:0+-99:2150:x1611866679114624:12345-0@lo:38
      00010000:00080000:1.0:1537197849.249540:0:2420:0:(ldlm_lib.c:811:target_handle_reconnect()) connect export for UUID 'lustre-MDT0001-mdtlov_UUID' at ffff880135452000, cookie 0xc7c641c9ddc2d0ae
      00010000:00080000:1.0:1537197849.249542:0:2420:0:(ldlm_lib.c:1173:target_handle_connect()) lustre-MDT0000: connection from lustre-MDT0001-mdtlov_UUID@0@lo recovering/t0 exp ffff880135452000 cur 1537197849 last 1537197844
      00000100:00100000:1.0:1537197849.249601:0:2420:0:(service.c:2171:ptlrpc_server_handle_request()) Handled RPC pname:cluuid+ref:pid:xid:nid:opc mdt_out00_001:lustre-MDT0001-mdtlov_UUID+5:2150:x1611866679114624:12345-0@lo:38 Request procesed in 71us (104us total) trans 0 rc 0/0
      00000100:00100000:1.0:1537197849.249987:0:2150:0:(client.c:2083:ptlrpc_check_set()) Completed RPC pname:cluuid:pid:xid:nid:opc ptlrpcd_rcv:lustre-MDT0001-mdtlov_UUID:2150:1611866679114624:0@lo:38
      00000100:00080000:1.0:1537197849.249996:0:2150:0:(import.c:1051:ptlrpc_connect_interpret()) lustre-MDT0000-lwp-MDT0001: connect to target with instance 17
      00000100:00080000:1.0:1537197849.249998:0:2150:0:(import.c:1249:ptlrpc_connect_interpret()) @@@ lustre-MDT0000-lwp-MDT0001: evicting (reconnect/recover flags not set: 4)  req@ffff8800a4903300 x1611866679114640/t0(0) o38->lustre-MDT0000-lwp-MDT0001@0@lo:12/10 lens 520/384 e 0 to 0 dl 1537197865 ref 1 fl Interpret:RN/0/0 rc 0/0
      00000100:00080000:1.0:1537197849.250002:0:2150:0:(import.c:1252:ptlrpc_connect_interpret()) ffff880138d2f800 lustre-MDT0000_UUID: changing import state from CONNECTING to EVICTED
      00000100:02020000:1.0:1537197849.250004:0:2150:0:(import.c:1486:ptlrpc_import_recovery_state_machine()) 167-0: lustre-MDT0000-lwp-MDT0001: This client was evicted by lustre-MDT0000; in progress operations using this service will fail.
      00000100:00080000:0.0:1537197849.259430:0:24601:0:(import.c:1427:ptlrpc_invalidate_import_thread()) thread invalidate import lustre-MDT0000-lwp-MDT0001 to lustre-MDT0000_UUID@192.168.112.5@tcp
      00000100:00100000:0.0:1537197849.259437:0:24601:0:(client.c:3108:ptlrpc_abort_inflight()) @@@ aborting waiting req  req@ffff88013528b000 x1611866679113568/t0(0) o700->lustre-MDT0000-lwp-MDT0001@0@lo:32/10 lens 264/216 e 0 to 0 dl 1537197845 ref 2 fl Rpc:RS/0/0 rc -19/-19
      00000100:00100000:1.0:1537197849.259486:0:2424:0:(client.c:2083:ptlrpc_check_set()) Completed RPC pname:cluuid:pid:xid:nid:opc mdt_seqm_0001:lustre-MDT0000-lwp-MDT0001_UUID:2424:1611866679113568:0@lo:700
      40000000:00020000:1.0:1537197849.259497:0:2424:0:(fid_handler.c:283:__seq_server_alloc_meta()) srv-lustre-MDT0001: Can't allocate super-sequence, rc -5
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: